# cgm-lamp

./: Cargo.toml  README.md
code/: .gitignore  Cargo.toml  README.md
code/lib/rgb-led/src/: lib.rs
code/src/: dexcom.rs  dimmer.rs  encoder.rs  index.html  lamp.rs  lib.rs  main.rs  power.rs  server.rs  settings.rs  storage.rs  sys.rs  wifi.rs
firmware/: README.md
firmware/src/: index.html  lamp.rs  main.rs  server.rs  settings.rs
hardware/: cgm-lamp-hw.kicad_pro
hardware/lib/Footprints.pretty/: SON50P200X200X80-9N.kicad_mod  XCVR_ESP32-C6-WROOM-1-N8.kicad_mod
lib/rgb-led/: Cargo.toml
lib/rgb-led/.cargo/: config.toml
pcb/: README.md  cgm-lamp-hw-panel.kicad_dru  cgm-lamp-hw-panel.kicad_pcb  cgm-lamp-hw-panel.kicad_pro  cgm-lamp-hw.kicad_pcb  cgm-lamp-hw.kicad_pro  cgm-lamp-hw.kicad_sch
pcb/bom/: ibom.html
pcb/production/: netlist.ipc
src/: dexcom.rs  index.html  lamp.rs  lib.rs  main.rs  server.rs  settings.rs  storage.rs
stl/: README.md  battery_cover.stl  lamp_base.stl
