[package]
name = "cgmlamp"
version = "0.1.0"
authors = ["sokrasins <sokrasins@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "cgmlamp"
harness = false   # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "=0.4.25"
embedded-svc = "=0.28.1"
esp-idf-svc = "=0.50.1"
anyhow = "=1.0.95"
config = "=0.15.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
rgb = "0.8.50"
esp-idf-hal = { version = "=0.45.2", features = ["rmt-legacy"] }
rgb-led = { path = "./lib/rgb-led" }
postcard = "1.1.1"
rotary-encoder-embedded = "0.4.0"
#cc = "=1.2.7"

[build-dependencies]
embuild = "=0.33.0"

[dev-dependencies]
anyhow = "1"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }
